# tinyml

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Full code.txt  all_code_output.txt  audio_i2s.c  audio_i2s.h  gc9a01_lvgl.c  gc9a01_lvgl.h  gc9a01_lvgl_display.c  gc9a01_lvgl_display.h  idf_component.yml  main.c  main_functions.cc  main_functions.h  mfcc.c  mfcc.h  model.cc  output_handler.cc  output_handler.h  print_code.py
